Style: increase opacity to fix legibility of label in search bar on chrome

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -44,8 +44,8 @@ header.layout-header {
             border: none;
             box-shadow: none;
             border-radius: .3rem;
-            background-color: rgba(255, 255, 255, 0.3);
             color: base.$whitesmoke;
+            background-color: rgba(255, 255, 255, 0.5);
             font-family: base.$primary-font-family;
             font-weight: bold;
             font-size: large;
